// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create a user and return their id 1`] = `
{
  "id": "userId",
}
`;

exports[`should propagate the error if an unknown error occurs 1`] = `[Error: Unknown error]`;

exports[`should return a user by Id 1`] = `
{
  "email": "test@example.com",
  "id": "userId",
}
`;

exports[`should return the user if userId is valid 1`] = `
{
  "email": "test@example.com",
  "hash": "hashedPasswordasdf",
  "id": "userId",
}
`;

exports[`should throw CannotCreateUserError if user creation fails 1`] = `[CannotCreateUserError: Cannot create user]`;

exports[`should throw ConflictError if user with the same email address already exists 1`] = `[ConflictError: User with this email already exists!]`;

exports[`should throw ConflictError if user with the same email already exists 1`] = `[ConflictError: User with this email already exists!]`;

exports[`should throw UnauthorizedError if user does not exist 1`] = `[UnauthorizedError: Invalid credentials]`;

exports[`should throw UnauthorizedError if userId is not a string 1`] = `[UnauthorizedError: Invalid credentials]`;

exports[`should throw UnauthorizedError if userId is not a string 2`] = `[UnauthorizedError: Invalid credentials]`;

exports[`should throw UnauthorizedError if userId is not a string 3`] = `[UnauthorizedError: Invalid credentials]`;

exports[`should throw UnauthorizedError if userId is not a string 4`] = `[UnauthorizedError: Invalid credentials]`;
